# next-webassembly

./: Cargo.toml
slides/: coding_agenda.md  webassembly.html
src/: invoice.rs  lib.rs
webassembly-next/: package-lock.json  package.json
webassembly-next/components/layout/: Container.js
webassembly-next/pages/: _app.js  index.js
